fix primary and secondary css variable contrast
1.8.6 (3)

--- a/src/global.scss
+++ b/src/global.scss
@@ -63,10 +63,6 @@ ion-item {
   user-select: text;
 }
 
-ion-badge {
-  --color: var(--ion-color-secondary);
-}
-
 :root {
   ion-img {
     /**
